Creating a sign up,log in and table

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         </p>
         <label>E-mail:</label>
         <br/>
-        <input type="email"placeholder="name@gmail.com"/>
+        <input type="email"placeholder="name@gmail.com:      &commat;"/>
         <br/>
         <br/>
         <label>Password:</label>
         <br/>
-        <input type="password"placeholder="6+ Characters, 1 Capital letter"/>
+        <input type="password"placeholder="6+ Characters, 1 Capital letter">
         <br/>
         <br/>
         <button type="button" id="button1">Create an account</button>
