--- a/table.html
+++ b/table.html
@@ -6,22 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <style>
 table{
   border-collapse: collapse;
   width: 100%;
-  
+  color: #7a69da;
 }
+
 
 th, td {
   padding: 6px;
   text-align: left;
-  border-bottom: 1px solid #304c99;
+  border: 1px solid #304c99;
 }
 tr:hover {background-color: #7a69da;}
 
 </style>
-<body>
+<body class="table">
     <table>
         <tr>
             <th>FirstName</th>
