Creating a sign up,log in and table

--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
         </p>
         <label>E-mail:</label>
         <br/>
-        <input type="email"placeholder="name@gmail.com"/>
+        <input type="email"placeholder="name@gmail.com: &commat;"/>
         <br/>
         <br/>
         <label>Password:</label>
