--- a/table.html
+++ b/table.html
@@ -48,7 +48,7 @@ tr:hover {background-color: #7a69da;}
         <tr>
             <td>Beth</td>
             <td>Wangui</td>
-            <td>bethwangui@gmail.com@gmail.com</td>
+            <td>bethwangui@gmail.com</td>
         </tr>
         <tr>
             <td>James</td>
