Creating a sign up,log in and table

--- a/table.html
+++ b/table.html
@@ -11,7 +11,7 @@
 table{
   border-collapse: collapse;
   width: 100%;
-  color: #7a69da;
+  color: #0c0436;
 }
 
 
@@ -20,7 +20,7 @@ th, td {
   text-align: left;
   border: 1px solid #304c99;
 }
-tr:hover {background-color: #7a69da;}
+tr:hover {background-color: #aba4cf;}
 
 </style>
 <body class="table">
