--- a/login.html
+++ b/login.html
@@ -22,6 +22,10 @@
         #button{
             color: rgb(24, 24, 145);
         }
+        #loginButton{
+            background-color: rgb(170, 170, 240);
+            color: rgb(1, 1, 19);
+        }
         
     </style>
 </head>
@@ -44,7 +48,7 @@
         <input type="password"placeholder="6+ Characters, 1 Capital letter"/>
         <br/>
         <br/>
-        <button type="button"><a href="table.html">Log In</a></button>
+        <button type="button" id="loginButton"><a href="table.html">Log In</a></button>
         <br/>
         <br/>
         <button type="button">Log In with Google</button>
