--- a/index.html
+++ b/index.html
@@ -5,20 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-
     <style>
-    body{
-        background-image: url(images/books.jpg);
-        background-repeat: no-repeat;
-        background-size: 100%;
-    
+    #booksImage{
+        float: left;
+        width: 300;
+        height: 500px;
     }
-        .signUpForm{
+    .signUpForm{
             margin-left: 70%;
             color: rgb(24, 24, 145);
         }
         .header{
             color: rgb(7, 7, 95);
+        }
+        #language{
+            color: rgb(7, 7, 95);
+            margin-left: 70%;
+            font-size: x-small;
         }
         #button1{
             background-color:rgb(47, 47, 165);
@@ -28,8 +31,17 @@
     </style>
 </head>
 <body>
+    <label id="language">Language: </label>
+        <select>
+            <option>English (UK)</option>
+            <option>English (USA)</option>
+            <option>Chinese</option>
+            <option>Portuguese</option>
+            <option>French</option>
+        </select>
     <h1 class="header">Zoho.</h1>
     <p class="header">A central hub where teams can work, plan and achieve things together.</p>
+    <img src="images/books.jpg" alt="books image" id="booksImage">
     <form class="signUpForm">
         <h6>START FOR FREE</h6>
         <h1>Sign up to Zoho.</h1>
