--- a/login.html
+++ b/login.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In</title>
     <style>
-    body{
-        background-image: url(images/books.jpg);
-        background-repeat: no-repeat;
-        background-size: 100%;
-    
+    #booksImages{
+        float: left;
+        width: 300;
+        height: 500px;
     }
     .logIn{
             margin-left: 70%;
@@ -18,6 +17,11 @@
         }
         .header{
             color: rgb(7, 7, 95);
+        }
+        #language{
+            color: rgb(38, 38, 75);
+            margin-left: 70%;
+            font-size:x-small;
         }
         #button{
             color: rgb(24, 24, 145);
@@ -30,8 +34,17 @@
     </style>
 </head>
 <body>
+    <label id="language">Language: </label>
+        <select>
+            <option>English (UK)</option>
+            <option>English (US)</option>
+            <option>Chinese</option>
+            <option>Portuguese</option>
+            <option>French</option>
+        </select>
     <h1 class="header">Zoho.</h1>
     <p class="header">A central hub where teams can work, plan and achieve things together.</p>
+    <img src="images/books.jpg" alt="booksImage" id="booksImages">
     <form class="logIn">
         <h6>START FOR FREE</h6>
         <h1>Log In to Zoho.</h1>
