--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         </select>
     <h1 class="header">Zoho.</h1>
     <p class="header">A central hub where teams can work, plan and achieve things together.</p>
-    <img src="images/books.jpg" alt="books image" id="booksImage">
+        <img src="images/books.jpg" alt="books image" id="booksImage">
+    <div class="form-container">
     <form class="signUpForm">
         <h6>START FOR FREE</h6>
         <h1>Sign up to Zoho.</h1>
@@ -62,7 +63,7 @@
         <br/>
         <br/>
         <button type="button" id="button2">Sign Up with Google</button>
-    </form> 
-
+    </form>
+    </div>
 </body>
 </html>
