--- a/login.html
+++ b/login.html
@@ -5,33 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In</title>
-    <style>
-    #booksImages{
-        float: left;
-        width: 300;
-        height: 500px;
-    }
-    .logIn{
-            margin-left: 70%;
-            color: rgb(24, 24, 145);
-        }
-        .header{
-            color: rgb(7, 7, 95);
-        }
-        #language{
-            color: rgb(38, 38, 75);
-            margin-left: 70%;
-            font-size:x-small;
-        }
-        #button{
-            color: rgb(24, 24, 145);
-        }
-        #loginButton{
-            background-color: rgb(170, 170, 240);
-            color: rgb(1, 1, 19);
-        }
-        
-    </style>
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <label id="language">Language: </label>
@@ -45,6 +19,7 @@
     <h1 class="header">Zoho.</h1>
     <p class="header">A central hub where teams can work, plan and achieve things together.</p>
     <img src="images/books.jpg" alt="booksImage" id="booksImages">
+    <div class="login-form">
     <form class="logIn">
         <h6>START FOR FREE</h6>
         <h1>Log In to Zoho.</h1>
@@ -65,7 +40,7 @@
         <br/>
         <br/>
         <button type="button">Log In with Google</button>
-    </form> 
-
+    </form>
+    </div>
 </body>
 </html>
