--- a/table.html
+++ b/table.html
@@ -5,24 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="table.css">
 </head>
-
-<style>
-table{
-  border-collapse: collapse;
-  width: 100%;
-  color: #0c0436;
-}
-
-
-th, td {
-  padding: 6px;
-  text-align: left;
-  border: 1px solid #304c99;
-}
-tr:hover {background-color: #aba4cf;}
-
-</style>
 <body class="table">
     <table>
         <tr>
